--- a/customer_churn_prediction.ipynb
+++ b/customer_churn_prediction.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c8370abc-64f4-44dd-a103-79f8c8e343f2",
+   "metadata": {},
+   "source": [
+    "%pip install streamlit>=1.30.0 numpy>=1.26.4 pandas>=2.2.0 scikit-learn>=1.4.0 joblib>=1.3.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "68d0f411-8b64-4e4a-afed-d6afc67c8cfe",
    "metadata": {},
    "source": [
@@ -10,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "872a47df-262e-4856-9b28-5a8416fab98b",
    "metadata": {},
    "outputs": [],
@@ -33,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b212e2fa-44e5-4892-90a2-afc57bef4b70",
    "metadata": {},
    "outputs": [],
@@ -43,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "886bdc50-e8dc-4c2c-843d-c0d0210cfc8e",
    "metadata": {},
    "outputs": [
@@ -166,7 +174,7 @@
        "4            Fiber              5           Cash        3118.87   Yes  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ff34891c-9801-4e01-9cb6-6e22cabb3bb4",
    "metadata": {},
    "outputs": [
@@ -188,7 +196,7 @@
        "(1500, 10)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "921c53aa-6543-44b6-909c-ea9028dfffb4",
    "metadata": {},
    "outputs": [
@@ -213,7 +221,7 @@
        "      dtype='object')>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "1fe56c71-ae70-4603-b298-7ab24d80ccce",
    "metadata": {},
    "outputs": [
@@ -259,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b30477f0-18a0-4288-b450-1cc2aa7244e9",
    "metadata": {},
    "outputs": [
@@ -382,7 +390,7 @@
        "max      7075.860000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "74997211-bf8b-442c-9d5e-faaca5e1ad22",
    "metadata": {},
    "outputs": [
@@ -404,7 +412,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "9a6918ce-83d9-4067-b417-f6ce4774e725",
    "metadata": {},
    "outputs": [
@@ -436,7 +444,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "d716006c-a41e-4890-a981-2838d70f7eb4",
    "metadata": {},
    "outputs": [],
@@ -459,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "f88cba0e-5dcf-4232-b6cd-653fd97a056d",
    "metadata": {},
    "outputs": [
@@ -479,7 +487,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "b36253e7-8237-4efa-abb3-5ee1f54502a4",
    "metadata": {},
    "outputs": [
@@ -523,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "1f48ea1e-6219-46c0-bb3e-30280e181c0b",
    "metadata": {},
    "outputs": [
@@ -573,7 +581,7 @@
        "1    Male       23.790323"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "95cecd01-72ec-4abd-af02-8d0ec3fb1663",
    "metadata": {},
    "outputs": [
@@ -612,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "5081ffdd-8a03-4e6b-9507-20e246312003",
    "metadata": {},
    "outputs": [
@@ -636,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "fe6afc11-99df-4636-9f94-64671cc8a94c",
    "metadata": {},
    "outputs": [
@@ -661,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "2e565d53-5392-417e-9eca-336ec586af17",
    "metadata": {},
    "outputs": [
@@ -711,7 +719,7 @@
        "1            Fiber       24.104235"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "65e0ee31-c197-4176-8f87-dcdc79cd2cbe",
    "metadata": {},
    "outputs": [
@@ -750,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "a406deac-62f1-47cf-a44c-d6cbc90a446f",
    "metadata": {},
    "outputs": [
@@ -800,7 +808,7 @@
        "1   Yes      27.806878"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "75265568-21bf-4d02-b644-a4d08fc8de68",
    "metadata": {},
    "outputs": [
@@ -839,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "7b7926ac-d109-44c8-8c2b-336777554bff",
    "metadata": {},
    "outputs": [
@@ -872,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "3584bb4b-3b9f-4878-8767-0561ede69a76",
    "metadata": {},
    "outputs": [],
@@ -892,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "3ebb152f-7bc5-4d8c-be30-9ddebc9e6c9c",
    "metadata": {},
    "outputs": [],
@@ -904,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "3ce6901a-1ca0-4e70-955a-393232385160",
    "metadata": {},
    "outputs": [],
@@ -916,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "5958e51a-7613-4092-84d6-35af35a450e8",
    "metadata": {},
    "outputs": [],
@@ -930,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "867c8e06-f514-42b9-9467-2abd4d71d5a4",
    "metadata": {},
    "outputs": [],
@@ -950,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "7af6acc4-dc5e-40da-98c5-58186c80ab97",
    "metadata": {},
    "outputs": [
@@ -1413,7 +1421,7 @@
        "                ('classifier', LogisticRegression(max_iter=1000))])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1425,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "5201fd91-2a60-4c30-873c-cc44333e5280",
    "metadata": {},
    "outputs": [],
@@ -1439,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "ed268dc8-8d6f-40ae-a336-1c46841dc80b",
    "metadata": {},
    "outputs": [
@@ -1460,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "7c9e5f1b-1c72-49ee-bc5a-38c1582e5169",
    "metadata": {},
    "outputs": [
@@ -1485,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "ce2611e3-4325-4405-8197-dafcb340cf20",
    "metadata": {},
    "outputs": [
@@ -1523,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "9d1afeb8-341a-4194-99be-a4502081a4da",
    "metadata": {},
    "outputs": [
@@ -1989,7 +1997,7 @@
        "                 RandomForestClassifier(n_estimators=200, random_state=42))])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2009,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "6c4827cc-379b-45df-a7db-ce9ad632a05e",
    "metadata": {},
    "outputs": [],
@@ -2021,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "1c4f6053-ab55-45e7-87a0-45e588fd222f",
    "metadata": {},
    "outputs": [
@@ -2043,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "6957def5-175c-46d5-923c-2a9d374ca184",
    "metadata": {},
    "outputs": [
@@ -2068,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "70a34cbd-0338-4e81-8df5-d4e9600bf03b",
    "metadata": {},
    "outputs": [
@@ -2104,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "id": "054ddc3b-a271-4e57-ba8e-b354ef372eb1",
    "metadata": {},
    "outputs": [],
@@ -2117,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "id": "205e98e2-d0e8-4603-bac8-04ada2aa8908",
    "metadata": {},
    "outputs": [
@@ -2209,7 +2217,7 @@
        "7     cat__Payment_Method_Card    0.017258"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2229,7 +2237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "id": "e9671322-732c-4d82-9a36-174302958beb",
    "metadata": {},
    "outputs": [
@@ -2239,7 +2247,7 @@
        "['churn_model.pkl']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2250,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "id": "f7a6ae91-68b6-4187-848e-196424b42dfe",
    "metadata": {},
    "outputs": [
@@ -2265,6 +2273,32 @@
    "source": [
     "print(\"Model saved successfully!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "6f6594c9-a872-4341-85d5-ad150c84f02b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip freeze > requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b114951-6335-4e8c-aeda-536ecb9d5b9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
